shop and customer get orders implementation
